<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_app">Add Application</string>
    <string name="add_app_size">No more than 4 applications can be added , please reselect.</string>
    <string name="als_id7_wranning">Your operation is too frequent. Please let go and operate!</string>
    <string name="apk360_title">360APK</string>
    <string name="app_aux">AUX</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_dialog_title">Please select the application you want to add</string>
    <string name="app_dtv">DTV</string>
    <string name="app_dvr">DVR</string>
    <string name="app_fcam">@string/function_fcam</string>
    <string name="app_name">KswCarProject</string>
    <string name="app_not_update">Upgrade not allowed!</string>
    <string name="app_ok">OK</string>
    <string name="audi_apps">@string/ksw_id7_apps</string>
    <string name="audi_bt">@string/ug_bluetooth</string>
    <string name="audi_car">@string/ksw_id7_car</string>
    <string name="audi_dashboard">@string/ksw_id7_dashboard_lable</string>
    <string name="audi_easyconnection">@string/id6_shouj_hulian</string>
    <string name="audi_factory_home_right_option1">Hide</string>
    <string name="audi_factory_home_right_option2">Display Weather Or AMAP Navigation Information</string>
    <string name="audi_factory_home_right_option3">Display Weather Information</string>
    <string name="audi_factory_home_right_option4">Display Car Information</string>
    <string name="audi_factory_home_right_option5">Display Music Information</string>
    <string name="audi_home_left_widget">Widget in the left side of the homepage</string>
    <string name="audi_home_right_widget">Widget in the right side of the homepage</string>
    <string name="audi_music">@string/ksw_id7_music</string>
    <string name="audi_navi">@string/ksw_id7_navi</string>
    <string name="audi_set_12hour">@string/text_6</string>
    <string name="audi_set_24hour">@string/text_7</string>
    <string name="audi_set_360_camera">@string/shext_3</string>
    <string name="audi_set_android_time">@string/text_5</string>
    <string name="audi_set_back_camera">@string/shext_1</string>
    <string name="audi_set_car_camera">@string/shext_2</string>
    <string name="audi_set_car_time">@string/text_4</string>
    <string name="audi_set_eq_bass">@string/eq_text7</string>
    <string name="audi_set_eq_classical">@string/eq_text6</string>
    <string name="audi_set_eq_dance">@string/eq_text3</string>
    <string name="audi_set_eq_jazz">@string/eq_text5</string>
    <string name="audi_set_eq_mezzo">@string/eq_text8</string>
    <string name="audi_set_eq_popular">@string/eq_text2</string>
    <string name="audi_set_eq_rock">@string/eq_text4</string>
    <string name="audi_set_eq_treble">@string/eq_text9</string>
    <string name="audi_set_eq_user">@string/eq_text1</string>
    <string name="audi_set_item_eq_text">@string/item4</string>
    <string name="audi_set_item_factory_text">@string/item9</string>
    <string name="audi_set_item_language_text">@string/item5</string>
    <string name="audi_set_item_more_text">@string/item8</string>
    <string name="audi_set_item_navi_text">@string/item2</string>
    <string name="audi_set_item_sound_text">@string/item3</string>
    <string name="audi_set_item_sysinfo_text">@string/item7</string>
    <string name="audi_set_item_system_text">@string/item1</string>
    <string name="audi_set_item_time_text">@string/item6</string>
    <string name="audi_set_sound_call_volume">@string/voic_3</string>
    <string name="audi_set_sound_hz_ms">@string/voic_1</string>
    <string name="audi_set_sound_media_volume">@string/voic_2</string>
    <string name="audi_set_sound_navi_volume">@string/voic_5</string>
    <string name="audi_set_sound_yc_ms">@string/voic_4</string>
    <string name="audi_set_speed_unit">@string/function_text24</string>
    <string name="audi_set_sync_time">@string/text_2</string>
    <string name="audi_set_sys_info_app_ver">@string/text_9</string>
    <string name="audi_set_sys_info_mcu_ver">@string/text_8</string>
    <string name="audi_set_sys_info_muc_updata">@string/text_11</string>
    <string name="audi_set_sys_info_nanndflash">@string/text_15</string>
    <string name="audi_set_sys_info_ram">@string/text_14</string>
    <string name="audi_set_sys_info_restore_factory">@string/text_12</string>
    <string name="audi_set_sys_info_system_ver">@string/text_10</string>
    <string name="audi_set_temp_unit">Unit Of Temperature</string>
    <string name="audi_set_time_zhishi">@string/text_3</string>
    <string name="audi_setting">@string/ksw_id7_setting</string>
    <string name="audi_system_brightness_auto">@string/function_text21</string>
    <string name="audi_system_brightness_day">@string/set_text6</string>
    <string name="audi_system_brightness_night">夜间亮度</string>
    <string name="audi_system_car_aux1">@string/set_caraux1</string>
    <string name="audi_system_car_aux2">@string/set_caraux2</string>
    <string name="audi_video">@string/video</string>
    <string name="bc_apps_btn_text">Android Apps</string>
    <string name="benz_gs_home_apps">@string/gs_application</string>
    <string name="benz_gs_home_apps_hint">@string/gs_application_mess</string>
    <string name="benz_gs_home_bt">@string/id6_phone</string>
    <string name="benz_gs_home_car">@string/ksw_id7_car_info</string>
    <string name="benz_gs_home_car_hint">@string/ksw_id7_switch_to_carinfo_window</string>
    <string name="benz_gs_home_dash">@string/ksw_id7_dashboard_lable</string>
    <string name="benz_gs_home_filema">@string/id6_filemanager</string>
    <string name="benz_gs_home_filema_hint">@string/gs_filemanager_mess</string>
    <string name="benz_gs_home_music">@string/ksw_id7_music</string>
    <string name="benz_gs_home_music_hint">@string/unkonw</string>
    <string name="benz_gs_home_navi">Navigation</string>
    <string name="benz_gs_home_navi_hint">@string/gs_real_time_navi</string>
    <string name="benz_gs_home_plink">@string/id6_shouj_hulian</string>
    <string name="benz_gs_home_plink_hint">@string/id6_shouj_hulian_mess</string>
    <string name="benz_gs_home_set">@string/ksw_id7_setting</string>
    <string name="benz_gs_home_set_hint">@string/id6_setting_mess</string>
    <string name="benz_gs_home_vide">@string/ksw_id7_hd_video</string>
    <string name="benz_gs_home_vide_hint">@string/ksw_id7_hd_video_warning</string>
    <string name="benz_mbux_2021_bg_sel_tip">BG Color</string>
    <string name="benz_mbux_2021_card_add_fail">Application cannot be added anymore</string>
    <string name="benz_mbux_2021_card_add_success">Application has been successfully added</string>
    <string name="benz_mbux_2021_img_sel_tip">Icon Style</string>
    <string name="benz_mbux_2021_style_classical_tip">Classical</string>
    <string name="benz_mbux_2021_style_modern_tip">Modern</string>
    <string name="benz_mbux_2021_theme_settings">Theme Settings</string>
    <string name="benz_mbux_2021_weather">Global Weather</string>
    <string name="benz_mbux_2021_weather_content">Toggle weather interface</string>
    <string name="benz_ntg6_fy_theme_settings">Theme</string>
    <string name="bmw_evo_id6_gs_home_apps">@string/ug_apps_text</string>
    <string name="bmw_evo_id6_gs_home_browser">@string/id6_browser</string>
    <string name="bmw_evo_id6_gs_home_bt">@string/id6_phone</string>
    <string name="bmw_evo_id6_gs_home_bt_hint">@string/id6_phone_mess</string>
    <string name="bmw_evo_id6_gs_home_car">@string/ksw_id7_car_info</string>
    <string name="bmw_evo_id6_gs_home_car_hint">@string/ksw_id7_switch_to_carinfo_window</string>
    <string name="bmw_evo_id6_gs_home_dash">@string/ksw_id7_ecu</string>
    <string name="bmw_evo_id6_gs_home_dvr">@string/function_text8</string>
    <string name="bmw_evo_id6_gs_home_dvr_hint">@string/id6_xingchejily_mess</string>
    <string name="bmw_evo_id6_gs_home_filema">@string/id6_filemanager</string>
    <string name="bmw_evo_id6_gs_home_filema_hint">@string/id6_filemanager_mess</string>
    <string name="bmw_evo_id6_gs_home_home_navi">@string/ksw_id7_navi</string>
    <string name="bmw_evo_id6_gs_home_home_navi_hint">@string/ksw_id7_real_time_navi</string>
    <string name="fuel_unit">Fuel Unit</string>
    <string name="item1">System</string>
    <string name="item5">Language</string>
    <string name="item6">Time</string>
    <string name="music_app_sel">Select Music App  </string>
    <string name="set_caraux">AUX Position</string>
    <string name="set_text1">Mirror Reverse Camera</string>
    <string name="set_text2">Disable Video In Motion</string>
    <string name="set_text3">Parking Lines</string>
    <string name="set_text4">Park Distance Control</string>
    <string name="set_text5">Camera Selection</string>
    <string name="set_text6">Brightness</string>
    <string name="set_text7">Mute while on reverse</string>
    <string name="text_2">Time Synchronization</string>
    <string name="text_3">Time System</string>
    <string name="text_4">Car Time</string>
    <string name="text_5">Android Time</string>
    <string name="text_6">12-Hour</string>
    <string name="text_7">24-Hour</string>
    <string name="video_app_sel">Select Video App</string>
</resources>