<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:tag="layout/bmw_id9_settings_system_time_layout_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/id9_settings_right_list_bg"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/bmw_id9_settings_system_time_lay" android:layout_width="510dp" android:layout_height="match_parent" android:layout_marginTop="33dp" android:paddingStart="1dp" android:paddingEnd="4dp">
        <TextView android:id="@+id/time_system_title" android:text="@string/text_2" style="@style/bmw_id9_settings_second_title"/>
        <RadioGroup android:id="@+id/bmw_id9_settings_time_sync" android:layout_width="match_parent" android:layout_height="wrap_content" android:checkedButton="@+id/bmw_id9_settings_time_car">
            <RadioButton android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/bmw_id9_settings_time_car" android:background="@drawable/bmw_id9_settings_item_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="73dp" android:button="@null" android:text="@string/text_4" android:drawablePadding="18dp" android:drawableStart="@drawable/bmw_id9_settings_item_sel" android:paddingStart="23dp"/>
            <View style="@style/bmw_id9_settings_item_divider"/>
            <RadioButton android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/bmw_id9_settings_time_android" android:background="@drawable/bmw_id9_settings_item_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="73dp" android:button="@null" android:text="@string/text_5" android:drawablePadding="18dp" android:drawableStart="@drawable/bmw_id9_settings_item_sel" android:paddingStart="23dp"/>
            <View style="@style/bmw_id9_settings_item_divider"/>
        </RadioGroup>
        <TextView android:text="@string/text_3" style="@style/bmw_id9_settings_second_title"/>
        <RadioGroup android:id="@+id/bmw_id9_settings_time_format" android:layout_width="match_parent" android:layout_height="wrap_content" android:checkedButton="@+id/bmw_id9_time_format_12">
            <RadioButton android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/bmw_id9_time_format_12" android:background="@drawable/bmw_id9_settings_item_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="73dp" android:button="@null" android:text="@string/text_6" android:drawablePadding="18dp" android:drawableStart="@drawable/bmw_id9_settings_item_sel" android:paddingStart="23dp"/>
            <View style="@style/bmw_id9_settings_item_divider"/>
            <RadioButton android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/bmw_id9_time_format_24" android:background="@drawable/bmw_id9_settings_item_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="73dp" android:button="@null" android:text="@string/text_7" android:drawablePadding="18dp" android:drawableStart="@drawable/bmw_id9_settings_item_sel" android:paddingStart="23dp"/>
            <View style="@style/bmw_id9_settings_item_divider"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
